@@ -3,6 +3,8 @@
 	* command.c: (cmd_describe_command_real) Fix leak, CID #38.
 	* memory.h: Experimental, have XFREE macro NULL out the freed
 	  pointer.
+	* linklist.c: (list_delete) call list_delete_all_node, don't
+	  duplicate it.
 
 2006-05-28 Paul Jakma <paul.jakma@sun.com>
 
